# nltu-schedule

./: .gitignore  Dockerfile  app.py  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  sync_schedule.py
.github/workflows/: deploy-ui.yaml  sync-schedule.yaml
docs/: asset-manifest.json  manifest.json
pages/: index.html
public/: index.html  manifest.json
schedule-ui/: package-lock.json
src/: App.tsx  data.json  index.tsx  students.json  teachers.json  types.tsx
src/components/: CopyToClipboardButton.tsx  ScrollToTop.tsx
static/js/: main.015fdf3f.js  main.015fdf3f.js.map  main.02e1355f.js  main.02e1355f.js.map  main.0f14fb36.js  main.0f14fb36.js.map  main.0fa90b8f.js  main.0fa90b8f.js.map  main.16fbe20f.js  main.16fbe20f.js.map  main.1f77bddc.js  main.1f77bddc.js.map  main.24a6abe6.js  main.24a6abe6.js.map  main.2c0591d8.js  main.2c0591d8.js.map  main.3ba86eab.js  main.3ba86eab.js.map  main.3ec17f07.js  main.3ec17f07.js.map  main.40760c1f.js  main.40760c1f.js.map  main.6421bf20.js  main.6421bf20.js.map  main.76541509.js  main.76541509.js.map  main.7964d5d6.js  main.7964d5d6.js.map  main.7f51d44f.js  main.7f51d44f.js.map  main.8d7c4908.js  main.8d7c4908.js.map  main.922341f7.js  main.922341f7.js.map  main.994f9225.js  main.994f9225.js.map  main.a7097cbd.js  main.a7097cbd.js.map  main.acfcc386.js  main.acfcc386.js.map  (+24 more)
